# TinyCompiler

./: CMakeLists.txt  GrammarTestTool.py  GrammarTransTool.py  c--_grammar.txt  c--_grammar_dict.txt  c--_grammar_prog.txt  c--_grammar_raw.txt  c--_grammar_simp.txt  c--_grammar_src.txt  main.cpp  source.cmm
all_test/: tables.cpp  tables.h  test.cpp
data_structure/: data_structure.h  errors.cpp  errors.h  grammar.cpp  grammar.h  quarternary.cpp  quarternary.h  tables.cpp  tables.h  token.cpp  token.h
lexical_analysis/: process_character.cpp  process_character.h  process_number.cpp  process_number.h  process_string.cpp  process_string.h  scanner.cpp  scanner.h
semantic_analysis/: semantic.cpp  semantic.h
syntax_analysis/: LL_1.cpp  LL_1.h  recursub.cpp  recursub.h
utility/: automaton.cpp  automaton.h  utility.cpp  utility.h
